# CMakeList.txt: 顶层 CMake 项目文件，在此处执行全局配置
# 并包含子项目。
#
cmake_minimum_required (VERSION 3.8)

project ("LeetCodeProject")
project ("Question")
project ("Question0001-1000/Question001-100/Question1")
project ("Question0001-1000/Question001-100/Question59")
project ("Question0001-1000/Question001-100/Question61")
project ("Question0001-1000/Question001-100/Question73")
project ("Question0001-1000/Question001-100/Question74")
project ("Question0001-1000/Question001-100/Question78")
project ("Question0001-1000/Question001-100/Question82")
project ("Question0001-1000/Question001-100/Question83")
project ("Question0001-1000/Question001-100/Question90")
project ("Question0001-1000/Question001-100/Question92")
project ("Question0001-1000/Question101-200/Question115")
project ("Question0001-1000/Question101-200/Question136")
project ("Question0001-1000/Question101-200/Question150")
project ("Question0001-1000/Question101-200/Question173")
project ("Question0001-1000/Question101-200/Question190")
project ("Question0001-1000/Question101-200/Question191")
project ("Question0001-1000/Question101-200/Question198")
project ("Question0001-1000/Question201-300/Question213")
project ("Question0001-1000/Question301-400/Question303")
project ("Question0001-1000/Question301-400/Question341")
project ("Question0001-1000/Question301-400/Question398")
project ("Question0001-1000/Question401-500/Question452")
project ("Question0001-1000/Question701-800/Question797")
project ("Question0001-1000/Question901-1000/Question976")
project ("Question1001-2000/Question1001-1100/Question1005")
project ("Question1001-2000/Question1001-1100/Question1006")
project ("Question1001-2000/Question1101-1200/Question1143")
project ("Question1001-2000/Question1301-1400/Question1385")
project ("Question1001-2000/Question1401-1500/Question1422")
project ("Question1001-2000/Question1701-1800/Question1759")

# inerview question
project ("InterviewQuestion/0206")
project ("InterviewQuestion/1610")
project ("InterviewQuestion/1721")

# 包含子项目。
add_subdirectory ("LeetCodeProject")
add_subdirectory ("Question")
add_subdirectory ("Question0001-1000/Question001-100/Question1")
add_subdirectory ("Question0001-1000/Question001-100/Question59")
add_subdirectory ("Question0001-1000/Question001-100/Question61")
add_subdirectory ("Question0001-1000/Question001-100/Question73")
add_subdirectory ("Question0001-1000/Question001-100/Question74")
add_subdirectory ("Question0001-1000/Question001-100/Question78")
add_subdirectory ("Question0001-1000/Question001-100/Question82")
add_subdirectory ("Question0001-1000/Question001-100/Question83")
add_subdirectory ("Question0001-1000/Question001-100/Question90")
add_subdirectory ("Question0001-1000/Question001-100/Question92")
add_subdirectory ("Question0001-1000/Question101-200/Question115")
add_subdirectory ("Question0001-1000/Question101-200/Question136")
add_subdirectory ("Question0001-1000/Question101-200/Question150")
add_subdirectory ("Question0001-1000/Question101-200/Question173")
add_subdirectory ("Question0001-1000/Question101-200/Question190")
add_subdirectory ("Question0001-1000/Question101-200/Question191")
add_subdirectory ("Question0001-1000/Question101-200/Question198")
add_subdirectory ("Question0001-1000/Question201-300/Question213")
add_subdirectory ("Question0001-1000/Question301-400/Question303")
add_subdirectory ("Question0001-1000/Question301-400/Question341")
add_subdirectory ("Question0001-1000/Question301-400/Question398")
add_subdirectory ("Question0001-1000/Question401-500/Question452")
add_subdirectory ("Question0001-1000/Question701-800/Question797")
add_subdirectory ("Question0001-1000/Question901-1000/Question976")
add_subdirectory ("Question1001-2000/Question1001-1100/Question1005")
add_subdirectory ("Question1001-2000/Question1001-1100/Question1006")
add_subdirectory ("Question1001-2000/Question1101-1200/Question1143")
add_subdirectory ("Question1001-2000/Question1301-1400/Question1385")
add_subdirectory ("Question1001-2000/Question1401-1500/Question1422")
add_subdirectory ("Question1001-2000/Question1701-1800/Question1759")


add_subdirectory ("InterviewQuestion/0206")
add_subdirectory ("InterviewQuestion/1610")
add_subdirectory ("InterviewQuestion/1721")
