# CMakeList.txt: 顶层 CMake 项目文件，在此处执行全局配置
# 并包含子项目。
#
cmake_minimum_required (VERSION 3.8)

project ("LeetCodeProject")
project ("Question")
project ("Question0001-1000/Question001-100/Question1")
project ("Question0001-1000/Question001-100/Question16")
project ("Question0001-1000/Question001-100/Question17")
project ("Question0001-1000/Question001-100/Question26")
project ("Question0001-1000/Question001-100/Question27")
project ("Question0001-1000/Question001-100/Question28")
project ("Question0001-1000/Question001-100/Question59")
project ("Question0001-1000/Question001-100/Question61")
project ("Question0001-1000/Question001-100/Question73")
project ("Question0001-1000/Question001-100/Question74")
project ("Question0001-1000/Question001-100/Question78")
project ("Question0001-1000/Question001-100/Question81")
project ("Question0001-1000/Question001-100/Question80")
project ("Question0001-1000/Question001-100/Question82")
project ("Question0001-1000/Question001-100/Question83")
project ("Question0001-1000/Question001-100/Question87")
project ("Question0001-1000/Question001-100/Question88")
project ("Question0001-1000/Question001-100/Question90")
project ("Question0001-1000/Question001-100/Question91")
project ("Question0001-1000/Question001-100/Question92")
project ("Question0001-1000/Question101-200/Question108")
project ("Question0001-1000/Question101-200/Question115")
project ("Question0001-1000/Question101-200/Question118")
project ("Question0001-1000/Question101-200/Question136")
project ("Question0001-1000/Question101-200/Question137")
project ("Question0001-1000/Question101-200/Question150")
project ("Question0001-1000/Question101-200/Question153")
project ("Question0001-1000/Question101-200/Question154")
project ("Question0001-1000/Question101-200/Question173")
project ("Question0001-1000/Question101-200/Question179")
project ("Question0001-1000/Question101-200/Question190")
project ("Question0001-1000/Question101-200/Question191")
project ("Question0001-1000/Question101-200/Question198")
project ("Question0001-1000/Question101-200/Question200")
project ("Question0001-1000/Question201-300/Question208")
project ("Question0001-1000/Question201-300/Question209")
project ("Question0001-1000/Question201-300/Question213")
project ("Question0001-1000/Question201-300/Question215")
project ("Question0001-1000/Question201-300/Question220")
project ("Question0001-1000/Question201-300/Question257")
project ("Question0001-1000/Question201-300/Question263")
project ("Question0001-1000/Question201-300/Question264")
project ("Question0001-1000/Question201-300/Question270")
project ("Question0001-1000/Question301-400/Question303")
project ("Question0001-1000/Question301-400/Question341")
project ("Question0001-1000/Question301-400/Question363")
project ("Question0001-1000/Question301-400/Question368")
project ("Question0001-1000/Question301-400/Question374")
project ("Question0001-1000/Question301-400/Question377")
project ("Question0001-1000/Question301-400/Question389")
project ("Question0001-1000/Question301-400/Question398")
project ("Question0001-1000/Question401-500/Question403")
project ("Question0001-1000/Question401-500/Question433")
project ("Question0001-1000/Question401-500/Question452")
project ("Question0001-1000/Question401-500/Question454")
project ("Question0001-1000/Question501-600/Question539")
project ("Question0001-1000/Question601-700/Question633")
project ("Question0001-1000/Question601-700/Question635")
project ("Question0001-1000/Question601-700/Question671")
project ("Question0001-1000/Question701-800/Question781")
project ("Question0001-1000/Question701-800/Question783")
project ("Question0001-1000/Question701-800/Question797")
project ("Question0001-1000/Question801-900/Question801")
project ("Question0001-1000/Question801-900/Question820")
project ("Question0001-1000/Question801-900/Question844")
project ("Question0001-1000/Question801-900/Question897")
project ("Question0001-1000/Question801-900/Question898")
project ("Question0001-1000/Question901-1000/Question938")
project ("Question0001-1000/Question901-1000/Question976")
project ("Question1001-2000/Question1001-1100/Question1005")
project ("Question1001-2000/Question1001-1100/Question1006")
project ("Question1001-2000/Question1001-1100/Question1011")
project ("Question1001-2000/Question1001-1100/Question1030")
project ("Question1001-2000/Question1101-1200/Question1143")
project ("Question1001-2000/Question1101-1200/Question1150")
project ("Question1001-2000/Question1201-1300/Question1224")
project ("Question1001-2000/Question1301-1400/Question1309")
project ("Question1001-2000/Question1301-1400/Question1317")
project ("Question1001-2000/Question1301-1400/Question1385")
project ("Question1001-2000/Question1401-1500/Question1422")
project ("Question1001-2000/Question1401-1500/Question1456")
project ("Question1001-2000/Question1401-1500/Question1481")
project ("Question1001-2000/Question1501-1600/Question1557")
project ("Question1001-2000/Question1501-1600/Question1600")
project ("Question1001-2000/Question1601-1700/Question1604")
project ("Question1001-2000/Question1601-1700/Question1608")
project ("Question1001-2000/Question1701-1800/Question1708")
project ("Question1001-2000/Question1701-1800/Question1759")
project ("Question1001-2000/Question1701-1800/Question1781")

# inerview question
project ("InterviewQuestion/0102")
project ("InterviewQuestion/0206")
project ("InterviewQuestion/1610")
project ("InterviewQuestion/1715")
project ("InterviewQuestion/1721")

# 包含子项目。
add_subdirectory ("LeetCodeProject")
add_subdirectory ("Question")
add_subdirectory ("Question0001-1000/Question001-100/Question1")
add_subdirectory ("Question0001-1000/Question001-100/Question16")
add_subdirectory ("Question0001-1000/Question001-100/Question17")
add_subdirectory ("Question0001-1000/Question001-100/Question26")
add_subdirectory ("Question0001-1000/Question001-100/Question27")
add_subdirectory ("Question0001-1000/Question001-100/Question28")
add_subdirectory ("Question0001-1000/Question001-100/Question59")
add_subdirectory ("Question0001-1000/Question001-100/Question61")
add_subdirectory ("Question0001-1000/Question001-100/Question73")
add_subdirectory ("Question0001-1000/Question001-100/Question74")
add_subdirectory ("Question0001-1000/Question001-100/Question78")
add_subdirectory ("Question0001-1000/Question001-100/Question80")
add_subdirectory ("Question0001-1000/Question001-100/Question81")
add_subdirectory ("Question0001-1000/Question001-100/Question82")
add_subdirectory ("Question0001-1000/Question001-100/Question83")
add_subdirectory ("Question0001-1000/Question001-100/Question87")
add_subdirectory ("Question0001-1000/Question001-100/Question88")
add_subdirectory ("Question0001-1000/Question001-100/Question90")
add_subdirectory ("Question0001-1000/Question001-100/Question91")
add_subdirectory ("Question0001-1000/Question001-100/Question92")
add_subdirectory ("Question0001-1000/Question101-200/Question108")
add_subdirectory ("Question0001-1000/Question101-200/Question115")
add_subdirectory ("Question0001-1000/Question101-200/Question118")
add_subdirectory ("Question0001-1000/Question101-200/Question136")
add_subdirectory ("Question0001-1000/Question101-200/Question137")
add_subdirectory ("Question0001-1000/Question101-200/Question150")
add_subdirectory ("Question0001-1000/Question101-200/Question153")
add_subdirectory ("Question0001-1000/Question101-200/Question154")
add_subdirectory ("Question0001-1000/Question101-200/Question173")
add_subdirectory ("Question0001-1000/Question101-200/Question179")
add_subdirectory ("Question0001-1000/Question101-200/Question190")
add_subdirectory ("Question0001-1000/Question101-200/Question191")
add_subdirectory ("Question0001-1000/Question101-200/Question198")
add_subdirectory ("Question0001-1000/Question101-200/Question200")
add_subdirectory ("Question0001-1000/Question201-300/Question208")
add_subdirectory ("Question0001-1000/Question201-300/Question209")
add_subdirectory ("Question0001-1000/Question201-300/Question213")
add_subdirectory ("Question0001-1000/Question201-300/Question215")
add_subdirectory ("Question0001-1000/Question201-300/Question220")
add_subdirectory ("Question0001-1000/Question201-300/Question257")
add_subdirectory ("Question0001-1000/Question201-300/Question263")
add_subdirectory ("Question0001-1000/Question201-300/Question264")
add_subdirectory ("Question0001-1000/Question201-300/Question270")
add_subdirectory ("Question0001-1000/Question301-400/Question303")
add_subdirectory ("Question0001-1000/Question301-400/Question341")
add_subdirectory ("Question0001-1000/Question301-400/Question363")
add_subdirectory ("Question0001-1000/Question301-400/Question368")
add_subdirectory ("Question0001-1000/Question301-400/Question374")
add_subdirectory ("Question0001-1000/Question301-400/Question377")
add_subdirectory ("Question0001-1000/Question301-400/Question389")
add_subdirectory ("Question0001-1000/Question301-400/Question398")
add_subdirectory ("Question0001-1000/Question401-500/Question403")
add_subdirectory ("Question0001-1000/Question401-500/Question433")
add_subdirectory ("Question0001-1000/Question401-500/Question452")
add_subdirectory ("Question0001-1000/Question401-500/Question454")
add_subdirectory ("Question0001-1000/Question501-600/Question539")
add_subdirectory ("Question0001-1000/Question601-700/Question633")
add_subdirectory ("Question0001-1000/Question601-700/Question635")
add_subdirectory ("Question0001-1000/Question601-700/Question671")
add_subdirectory ("Question0001-1000/Question701-800/Question781")
add_subdirectory ("Question0001-1000/Question701-800/Question783")
add_subdirectory ("Question0001-1000/Question701-800/Question797")
add_subdirectory ("Question0001-1000/Question801-900/Question801")
add_subdirectory ("Question0001-1000/Question801-900/Question820")
add_subdirectory ("Question0001-1000/Question801-900/Question844")
add_subdirectory ("Question0001-1000/Question801-900/Question897")
add_subdirectory ("Question0001-1000/Question801-900/Question898")
add_subdirectory ("Question0001-1000/Question901-1000/Question938")
add_subdirectory ("Question0001-1000/Question901-1000/Question976")
add_subdirectory ("Question1001-2000/Question1001-1100/Question1005")
add_subdirectory ("Question1001-2000/Question1001-1100/Question1006")
add_subdirectory ("Question1001-2000/Question1001-1100/Question1011")
add_subdirectory ("Question1001-2000/Question1001-1100/Question1030")
add_subdirectory ("Question1001-2000/Question1101-1200/Question1143")
add_subdirectory ("Question1001-2000/Question1101-1200/Question1150")
add_subdirectory ("Question1001-2000/Question1201-1300/Question1224")
add_subdirectory ("Question1001-2000/Question1301-1400/Question1309")
add_subdirectory ("Question1001-2000/Question1301-1400/Question1317")
add_subdirectory ("Question1001-2000/Question1301-1400/Question1385")
add_subdirectory ("Question1001-2000/Question1401-1500/Question1422")
add_subdirectory ("Question1001-2000/Question1401-1500/Question1456")
add_subdirectory ("Question1001-2000/Question1401-1500/Question1481")
add_subdirectory ("Question1001-2000/Question1501-1600/Question1557")
add_subdirectory ("Question1001-2000/Question1501-1600/Question1600")
add_subdirectory ("Question1001-2000/Question1601-1700/Question1604")
add_subdirectory ("Question1001-2000/Question1601-1700/Question1608")
add_subdirectory ("Question1001-2000/Question1701-1800/Question1708")
add_subdirectory ("Question1001-2000/Question1701-1800/Question1759")
add_subdirectory ("Question1001-2000/Question1701-1800/Question1781")


add_subdirectory ("InterviewQuestion/0102")
add_subdirectory ("InterviewQuestion/0206")
add_subdirectory ("InterviewQuestion/1610")
add_subdirectory ("InterviewQuestion/1715")
add_subdirectory ("InterviewQuestion/1721")
